--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <main>
       <h1 class="ttl">一人神経衰弱</h1>
       <div class="box js-box"></div>
+      <p class="congratulations">congratulations!!!</p>
     </main>
     <script type="module" src="/src/js/main.ts"></script>
   </body>
